--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Yoga With Melissa Bennett"
+      content="Free Warriors at Ease yoga class for veterans"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon-180x180.png" />
     <!--
